--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ footer .cols .links-col a:hover{
     margin-top: 100px;
 }
 .displayMail h1 {
-    color: rgba(255, 255, 255, 0.66);
+    color: white;
     font-family: "Poppins",sans-serif;
     font-weight: 600;
     font-size:90px
